Bug 717180 - Ignore document.write after window.location. r=smaug, a=akeybl.